# misconfig-index

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  blog-post-draft.md  bulk_scan.py  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml  repos.txt  results_blog.json
.github/workflows/: misconfig-index.yml  publish.yml
backend/: __init__.py  auth.py  config.py  crud.py  deps.py  main.py  models.py  ratelimit.py  schemas.py
backend/migrations/: README.md
backend/routers/: __init__.py  auth.py  badge.py  billing.py  findings.py  reports.py  scans.py  waitlist.py
backend/routers/v1/: benchmark.py  ingest.py  orgs.py  repos.py
samples/: open_sg.tf  privileged.yaml
scanner/: __init__.py  __main__.py  ci_ingest.py  cli.py  cmd.py  config.py  github_client.py  loader.py  scanner.py  scoring.py
scanner/rules/: __init__.py  base.py  cloudformation.py  dockerfile.py  kubernetes.py  terraform.py
scripts/: backup_db.sh  backup_sqlite.sh  create_org.py  init_db.py  migrate_add_orgs.py  migrate_add_score.py  run_weekly_scan.sh  seed_history.py
tests/: test_rules_cfn.py  test_rules_dockerfile.py  test_rules_k8s.py  test_rules_networking_etc.py  test_rules_s3_rds.py
web/: app.js  index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css
web/account/: account.js  index.html
web/blog/: index.html  introducing-misconfig-index.html  we-scanned-92-iac-repos.html
web/docs/: index.html
web/pricing/: index.html
web/privacy/: index.html
web/signup/: index.html
web/terms/: index.html
